crates/plotnik-tests/tests/04-emit/types/recursion/error_repetition_capture_of_recursive_multi_node_def.txt
A = {
  (expression_statement)
  (statement_block (A))?
}

Q = (program
  (A)* @xs
)
------------------ DIAGNOSTICS -------------------
error: `@xs` cannot collect `(A)*` because one repetition does not produce one node or value
 --> query.ptk:7:3
  |
1 | / A = {
2 | |   (expression_statement)
3 | |   (statement_block (A))?
4 | | }
  | |_- `A` is defined here
...
7 |     (A)* @xs
  |     ^^^^
  |
help: make each repetition produce a record by changing `(expression_statement)` to `(expression_statement) @xs_item` in definition `A`
